# SIRgraphs

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist.in  LICENSE  README.md  SIRgraphs.sln  SIRgraphs.vcxproj  SIRgraphs.vcxproj.filters  imgui.ini
.github/workflows/: build_all.yml
src/: 2DUtils.h  Application.cpp  Application.h  GraphSimulation.cpp  GraphSimulation.h  Renderer.cpp  Renderer.hpp  main.cpp
